--- a/war/SFMovie.html
+++ b/war/SFMovie.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>SF Movie</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -47,8 +47,5 @@
       </div>
     </noscript>
 
-    <table align="center">
-    </table>
-    <div id="map"></div>
   </body>
 </html>
